# PokeTeam

./: .gitignore  .pylintrc  ENVIRONMENT.md  LICENSE.md  README.md  analyze.py  build_speed_tiers.py  corefinder.py  create_csv_full_dump.py  create_csv_scores.py  dex.py  display.py  file_constants.py  file_loader.py  learn_counter_fit.py  main.py  preprocess.py  pyproject.toml  requirements.txt  test_performance.py  update.py
gimp_images/: Homepage Logo 3.xcf  Pokeball Icon.xcf  no_item.xcf
nodejs/: build_dexes.mjs  package-lock.json  package.json  preprocess.mjs
static/: AddIcons.js  CoreFinderScript.js  Prettify.js  TeamBuilderScript.js  novalue.js  style.css
static/icons/: site.webmanifest
templates/: AbilitiesTable.html  AbilityDex.html  AbilityInfo.html  AbilityUsersTable.html  Base.html  BaseStats.html  CoreFinder.html  CoreFinderResults.html  CountersTable.html  DataSelector.html  ItemDex.html  ItemHoldersTable.html  ItemInfo.html  ItemsTable.html  MoveDex.html  MoveInfo.html  MoveUsersTable.html  MovesTable.html  NavBar.html  NumberEdgesError.html  Pokedex.html  PokemonInfo.html  RecommendationsTable.html  RenderIcons.html  SpeedTiers.html  SuggestedTeam.html  SwapsTable.html  TeamBuilder.html  TeamBuilderAnalysis.html  TeammatesTable.html  ThreatsTable.html  link_builder.html
tests/: dynamic_tests.py  md_for_tests.py  test_analyze.py  test_analyze_custom.py  test_corefinder.py  test_weights.py
tests/test_data/: gen1.dex  gen1ou-0.json  gen1ou-0_team.npy  gen1ou-0_threats.npy  gen7doublesou-0.json  gen7doublesou-0_team.npy  gen8anythinggoes-0.json  (+11 more)
(+3 files in other folders)
