[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["googlyeyesultra"]
description = ""
name = "repl_python3_PokemonTeamBuilder"
version = "0.1.0"
[tool.poetry.dependencies]
flask = "^2.0"
flask-table = "^0.5.0"
networkx = "^2.6.3"
python = "^3.8"
waitress = "^2.0.0"
wtforms = "^2.3.3"
numpy = "^1.2"
sklearn = "^0.0"
lp37 = "^2.1.1"
line-profiler = "^3.4.0"
ujson = "^5.1.0"
pokebase = "^1.3.0"
modAL = "^0.4.1"
[tool.poetry.dev-dependencies]
